--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Hello to all - Padmaraj Nidagundi</h1>
-<p>Wellcome to my page.</p>
+<h1>Padmaraj Nidagundi</h1>
+<p>PhD Student, Faculty of Computer Science, Riga Technical University</p>
 
   <p>  <p>  <p>  <p>
   
-  
-    <a href="https://codepen.io/PadmarajNidagundi/full/PBNXYd">Ongoing Ph.D. research work by Padmaraj Nidagundi</a>
+  URL link to Test Strategy Board
+    <a href="https://codepen.io/PadmarajNidagundi/full/PBNXYd">Click here to Get Ongoing Ph.D. research work by Padmaraj Nidagundi</a>
     <p>  <p>  <p>  <p>
   <img src="https://s3-us-west-2.amazonaws.com/i.cdpn.io/2173759.PBNXYd.ef82fe4b-abd9-409a-a595-47105cff319d.png">
   
